--- a/src/components/common/UI/Button/Button.scss
+++ b/src/components/common/UI/Button/Button.scss
@@ -5,13 +5,10 @@
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
   background-color: #0000;
   border: 1px solid #0000;
-  padding: 0.375rem 0.75rem;
+  text-transform: uppercase;
+  padding: 0.375rem 1rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
