--- a/src/components/common/UI/Input/Input.scss
+++ b/src/components/common/UI/Input/Input.scss
@@ -1,8 +1,10 @@
 .input-wrapper {
+  padding: 20px 30px 20px 0;
+  display: flex;
   &__input {
     display: block;
     height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
+    padding: 0.375rem 1.4rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -18,6 +20,12 @@
       border-color: #80bdff;
       outline: 0;
       box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    }
+    &_radio {
+      &:focus {
+        border: none;
+        box-shadow: none;
+      }
     }
   }
   &__error {
