+ google map with exchange point and some validation

--- a/src/components/forms/CurrencyCalculatorForm/CurrencyCalculatorForm.scss
+++ b/src/components/forms/CurrencyCalculatorForm/CurrencyCalculatorForm.scss
@@ -17,7 +17,7 @@
     align-items: flex-start;
     &_inputs {
       display: flex;
-      align-items: center;
+      align-items: baseline;
     }
   }
   .select {
