--- a/src/components/common/UI/Input/Input.scss
+++ b/src/components/common/UI/Input/Input.scss
@@ -1,6 +1,7 @@
 .input-wrapper {
   padding: 20px 30px 20px 0;
   display: flex;
+  flex-direction: column;
   &__input {
     display: block;
     height: calc(1.5em + 0.75rem + 2px);
@@ -31,5 +32,6 @@
   &__error {
     color: red;
     font-size: 1rem;
+    margin-top: 10px;
   }
 }
